MET-6588 Fix sonar issues